fix responsive on tablet views

--- a/frontend/src/SASS/components/OrangeButton.scss
+++ b/frontend/src/SASS/components/OrangeButton.scss
@@ -5,7 +5,7 @@
   color: #fff;
   border-color: #ff7c16;
   padding: 1rem 2rem;
-  margin-bottom: 1rem;
+  margin-bottom: 2rem;
   font-size: 2rem;
 }
 
