--- a/frontend/src/SASS/layout/HighlightBanner.scss
+++ b/frontend/src/SASS/layout/HighlightBanner.scss
@@ -1,7 +1,7 @@
 .highlightBannerContainer {
   height: 100%;
   .highlightBannerContent {
-    height: 330px;
+    height: 420px;
   }
   .category {
     color: #f215b6;
