--- a/frontend/src/SASS/layout/LatestNews.scss
+++ b/frontend/src/SASS/layout/LatestNews.scss
@@ -18,6 +18,7 @@
     color: #0f526e;
     border-radius: 10px;
     font-size: 1.5rem;
+    margin-bottom: 2rem;
     .nav-item {
       margin-bottom: 1rem;
     }
