--- a/frontend/src/SASS/layout/ThingsWeDo.scss
+++ b/frontend/src/SASS/layout/ThingsWeDo.scss
@@ -10,6 +10,7 @@
   .imagesContainers {
     z-index: 2;
     width: 100%;
+    justify-content: center;
 
     .img-container {
       position: relative;
@@ -81,13 +82,25 @@
   }
 }
 
-/* Media query for screens from 992px wide and up */
-@media (min-width: 992px) {
+/* Media query for screens from 1025px wide and up */
+@media (min-width: 992px) and (max-width: 1024px) {
+  .things-we-do {
+    margin-top: 15rem;
+
+    .things-we-do-desc {
+      padding: 3rem 0;
+    }
+  }
+}
+
+/* Media query for screens from 1025px wide and up */
+@media (min-width: 1025px) {
   .things-we-do {
     background-position: -100px 0;
     flex-direction: row;
     .imagesContainers {
       margin-left: 5rem;
+      justify-content: flex-start;
     }
     .things-we-do-desc {
       margin-left: -27rem;
